Use getFirst() in Java 21.